# booker-playwright-test-suite

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  helpers.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: client.py  models.py
pages/: admin_page.py  base_page.py  booking_page.py  contact_page.py  home_page.py
tests/: conftest.py
tests/api/: conftest.py  test_auth_api.py  test_booking_api.py
tests/ui/: conftest.py  test_admin.py  test_admin_ui.py  test_booking.py  test_booking_ui.py  test_contact.py  test_contact_ui.py  test_home.py  test_home_ui.py
tests/ui/data/: contact_page_cases.py
