[project]
name = "playwright-suite"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pytest-playwright",
    "pytest>=8.0",
    "httpx>=0.27",
    "pydantic",
    "python-dotenv",
    "Faker",
    "pytest-html",
    "pytest-check",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
