[project]
name = "playwright-suite"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pytest-playwright",
    "pytest>=8.0",
    "httpx>=0.27",
    "pydantic",
    "python-dotenv",
    "Faker",
    "pytest-html",
    "pytest-check",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.playwright]
expect_timeout = 10000

[tool.pytest.ini_options]
pythonpath=["."]
addopts = "--import-mode=importlib --screenshot=only-on-failure --tracing=retain-on-failure --html=report.html --self-contained-html"
testpaths = ["tests"]
markers = [
    "home: tests related to the home page",
    "booking: tests related to the booking page",
    "admin: tests related to the admin page",
    "contact: tests related to the contact page"
]